# SLAM-DSChar

./: CMakeLists.txt  Dockerfile  README.md  run_docker.sh
Docker/: Dockerfile  build.sh
Examples/: demo_main.cpp  demo_test.cpp
ext_tools/: Dataset_timestamp_tools.py
in_data/: EuroC_config.txt  EuroC_config_min.txt  KITTI_config.txt  KITTI_config_min.txt  TUM_RGBD_config.txt  TUM_RGBD_config_or.txt  TUM_VI_config.txt  TUM_VI_config_min.txt
in_data/templates/: brightness_diff_template_plot.tex  brightness_template_plot (copy).tex  brightness_template_plot.tex  contrast_template_plot.tex  features_count_template_plot.tex  features_ratio_template_plot.tex  revisit_dist_template_plot.tex  revisit_score_template_plot.tex  tikz_template_plot.tex
include/: Blur_Scoreboard.h  Blur_handler.h  Brightness_Scoreboard.h  Brightness_handler.h  Calculus_Utils.h  Contrast_Scoreboard.h  Contrast_handler.h  DBoW2_Scoreboard.h  DBow2_handler.h  Dataset.h  Dataset_Scoreboard.h  Disparity_Method_Scoreboard.h  Disparity_Scoreboard.h  Disparity_handler.h  Export_Utils.h  Exposure_Scoreboard.h  Exposure_handler.h  Features_Scoreboard.h  Features_handler.h  General_Char_Scoreboard.h  General_Metrics_handler.h  Inertial_Axis_DR_Scorebaord.h  Inertial_Axis_Diff_Scorebaord.h  Inertial_DR_Scoreboard.h  Inertial_DR_handler.h  Inertial_Diff_Scoreboard.h  Inertial_Diff_handler.h  Inertial_data.h  Processing_Element.h  Reports_Utils.h  Rotation_only_Scoreboard.h  Rotation_only_handler.h  Scoreboard.h  Sensor_Data.h  Sequence.h  Sequence_Scoreboard.h  Stats_Utils.h  System.h  UI_Utils.h  Utils.h  (+6 more)
libs/DBoW2/include/DBoW2/: TemplatedVocabulary.h
libs/indicators/: indicators.hpp
out_data/reports/KITTI/: [BRIGHTNESS]KITTI_04.txt  [BRIGHTNESS_CHANGE]KITTI_04.txt  [BRIGHTNESS_DIFF]KITTI_04.txt  [BRIGHTNESS_DIFF_3SIGMA_RATIO]KITTI_04.txt  [RGB_CAM_L_DURATION]KITTI_04.txt
out_data/reports_categorized/EURO_C/ACC_MAG/: [ACC_MAG]EURO_C_MH_01_easy.txt  [ACC_MAG]EURO_C_MH_02_easy.txt  [ACC_MAG]EURO_C_MH_03_medium.txt  [ACC_MAG]EURO_C_MH_04_difficult.txt  [ACC_MAG]EURO_C_MH_05_difficult.txt  [ACC_MAG]EURO_C_V1_01_easy.txt  [ACC_MAG]EURO_C_V1_02_medium.txt  [ACC_MAG]EURO_C_V1_03_difficult.txt  [ACC_MAG]EURO_C_V2_01_easy.txt  [ACC_MAG]EURO_C_V2_02_medium.txt  [ACC_MAG]EURO_C_V2_03_difficult.txt
out_data/reports_categorized/EURO_C/AX/: [AX]EURO_C_MH_01_easy.txt  [AX]EURO_C_MH_02_easy.txt  [AX]EURO_C_MH_03_medium.txt  [AX]EURO_C_MH_04_difficult.txt  [AX]EURO_C_MH_05_difficult.txt  [AX]EURO_C_V1_01_easy.txt  [AX]EURO_C_V1_02_medium.txt  [AX]EURO_C_V1_03_difficult.txt  [AX]EURO_C_V2_01_easy.txt  [AX]EURO_C_V2_02_medium.txt  [AX]EURO_C_V2_03_difficult.txt
out_data/reports_categorized/EURO_C/AX_1ST_DIFF/: [AX_1ST_DIFF]EURO_C_MH_01_easy.txt  [AX_1ST_DIFF]EURO_C_MH_02_easy.txt  [AX_1ST_DIFF]EURO_C_MH_03_medium.txt  [AX_1ST_DIFF]EURO_C_MH_04_difficult.txt  [AX_1ST_DIFF]EURO_C_MH_05_difficult.txt  [AX_1ST_DIFF]EURO_C_V1_01_easy.txt  [AX_1ST_DIFF]EURO_C_V1_02_medium.txt  [AX_1ST_DIFF]EURO_C_V1_03_difficult.txt  (+3 more)
py_script/DS_SeqLevel_Plotter/: plot_disparity.py  plot_exposure.py  plot_inertial_diff.py  plot_revisit.py  plot_rot_only.py
py_script/EuroC_plotter/: EuroC_blur.py  EuroC_brightness.py  EuroC_contrast.py  EuroC_features.py  EuroC_revisit.py
py_script/EuroC_single_fig_plotter/: EuroC_brightness_barchart.py  EuroC_brightness_boxplot.py  EuroC_brightness_diff_boxplot.py  EuroC_contrast_CR_boxplot.py  EuroC_contrast_michelson_boxplot.py  EuroC_contrast_rms_boxplot.py  EuroC_contrast_weber_boxplot.py  EuroC_features_count_boxplot.py  EuroC_features_dist_abs_boxplot.py  EuroC_features_dist_avg_boxplot.py
py_script/KITTI_plotter/: KITTI_blur.py  KITTI_brightness.py  KITTI_contrast.py  KITTI_features.py  KITTI_revisit.py
py_script/KITTI_single_fig_plotter/: KITTI_brightness_barchart.py  KITTI_brightness_boxplot.py  KITTI_brightness_diff_boxplot.py  KITTI_brightness_violinplot.py  KITTI_contrast_CR_boxplot.py  KITTI_contrast_michelson_boxplot.py  KITTI_contrast_rms_boxplot.py  KITTI_contrast_weber_boxplot.py  KITTI_features_count_boxplot.py  KITTI_features_dist_abs_boxplot.py  KITTI_features_dist_avg_boxplot.py
py_script/TUMVI_plotter/: TUMVI_blur.py  TUMVI_brightness.py  TUMVI_features.py  TUM_contrast.py
py_script/publication_tools/: DS_survey_tools.py  ds_compare_charts.py  dssurvey-5836227159b5.json  publication_tools.py
py_script/scratch_samples/: barchart_sample.py  boxplot_sample.py  raincloud_plot_sample.py  scatterplot_sample.py  subplot_sample.py
py_script/simulated_blur_engine/: blur_detector.py  blur_handler.py
py_script/tools/: Correlation_Analysis.py  DS_EVAL_report_generator.py  DS_fns.py  DS_plots.py  Dataset_timestamp_tools.py  Diversity_Analysis.py  Diversity_tools.py  KDE_plotter.py  RainCloud_plotter.py  barchart_plotter.py  coverage_reports.py  density_plotter.py  dicts_generator.py  export_data_cat.py  img_crop.py  metric_ridgeline_plotter.py  partial_blur.py  reports_categorizer.py  seq_level_stats.py  stats_fns.py  sys_utils.py  table_utils.py  visualization_fns.py
script/: build_sys.sh  euroc.sh  euroc_min.sh  kitti.sh  kitti_min.sh  test.sh  tumrgbd.sh  tumvi.sh
src/: Blur_Scoreboard.cpp  Blur_handler.cpp  Brightness_Scoreboard.cpp  Brightness_handler.cpp  Calculus_Utils.cpp  Contrast_Scoreboard.cpp  Contrast_handler.cpp  DBoW2_Scoreboard.cpp  DBow2_handler.cpp  Dataset.cpp  Dataset_Scoreboard.cpp  Disparity_Method_Scoreboard.cpp  Disparity_Scoreboard.cpp  Disparity_handler.cpp  Export_Utils.cpp  Exposure_Scoreboard.cpp  Exposure_handler.cpp  Features_Scoreboard.cpp  Features_handler.cpp  General_Char_Scoreboard.cpp  General_Metrics_handler.cpp  Inertial_Axis_DR_Scorebaord.cpp  Inertial_Axis_Diff_Scorebaord.cpp  Inertial_DR_Scoreboard.cpp  Inertial_DR_handler.cpp  Inertial_Diff_Scoreboard.cpp  Inertial_Diff_handler.cpp  Inertial_data.cpp  Processing_Element.cpp  Reports_Utils.cpp  Rotation_only_Scoreboard.cpp  Rotation_only_handler.cpp  Scoreboard.cpp  Sensor_Data.cpp  Sequence.cpp  Sequence_Scoreboard.cpp  Stats_Utils.cpp  System.cpp  UI_Utils.cpp  Utils.cpp  (+4 more)
(+3330 files in other folders)
